# Lab6

./: CMakeLists.txt
.github/: settings.yml
demo/: main.cpp
include/: CalcHash.hpp  Logging.hpp  MakeJson.hpp
sources/: CalcHash.cpp  Logging.cpp  MakeJson.cpp
tests/: test.cpp
